src/objects/Navigation__c.object
<CustomObject>
    <description>Each Navigation has an URL address. It also has a given behaviour which determines if it&apos;ll be opened in the current tab or a new tab.</description>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behaviour__c</fullName>
        <label>Behaviour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Tab</fullName>
                </value>
                <value>
                    <fullName>Same Tab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cluster</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Cluster__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>ClusterRoot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Navigations</relationshipLabel>
        <relationshipName>Navigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultPage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentNavigation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Navigation</label>
        <referenceTo>Navigation__c</referenceTo>
        <relationshipLabel>Related Navigations</relationshipLabel>
        <relationshipName>RelatedNavigations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Manage the status of the record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URLMask__c</fullName>
        <label>URL Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Navigation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Navigation</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Navigation__c.Navigation</value>
        </filters>
        <label>Navigation</label>
    </listViews>
    <listViews>
        <fullName>NavigationVariant</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Navigation__c.Navigation_variant</value>
        </filters>
        <label>Navigation variant</label>
    </listViews>
    <nameField>
        <label>Navigation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Navigations</pluralLabel>
    <recordTypes>
        <fullName>Navigation</fullName>
        <active>true</active>
        <description>Internal or external navigation points. They are mostly references to community pages.</description>
        <label>Navigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Navigation_variant</fullName>
        <active>false</active>
        <description>Navigation points referred to page variants in community. Also have a relationship with a audience user.</description>
        <label>Navigation variant</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Clustering__c</fullName>
        <label>Clustering</label>
    </sharingReasons>
</CustomObject>